# de-challenge

./: Dockerfile  Documentation.md  LICENSE.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
api/: main.py
api/application/: resources.py  routes.py
api/domain/dtos/: locations.py
api/domain/exceptions/: exceptions.py
api/domain/models/: location.py
api/domain/repositories/: __init__.py  locations.py
api/domain/services/: locations.py  redis_event_handler.py
api/infrastructure/database/: mongo.py  redis.py
simulation/: simulate.py
tests/: test_api.py
